src/objects/Call_Results_Status_Mapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Active_Response__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active Response</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Call_Disposition__c</fullName>
        <label>Call Disposition</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Lead_Contact_Status__c</fullName>
        <label>Lead/Contact Status</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recent_Response_Timeframe__c</fullName>
        <label>Recent Response Timeframe</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Response_Status_Values__c</fullName>
        <label>Response Status Values</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status_Reason__c</fullName>
        <label>Status Reason</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Values_to_Update__c</fullName>
        <label>Status Values to Update</label>
        <type>TextArea</type>
    </fields>
    <label>Call Results Status Mapping</label>
    <listViews>
        <fullName>All_with_Details</fullName>
        <columns>NAME</columns>
        <columns>Active_Response__c</columns>
        <columns>Call_Disposition__c</columns>
        <columns>Lead_Contact_Status__c</columns>
        <columns>Recent_Response_Timeframe__c</columns>
        <columns>Response_Status_Values__c</columns>
        <columns>Status_Reason__c</columns>
        <columns>Status_Values_to_Update__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>SETUP_TYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All with Details</label>
    </listViews>
</CustomObject>